log.txt
Client_ProcThread.java:98: error: cannot find symbol
                return CommObject.M_COMM_SEND_LOGIN;
                                 ^
  symbol:   variable M_COMM_SEND_LOGIN
  location: class CommObject
Client_ProcThread.java:144: error: constructor CommObject in class CommObject cannot be applied to given types;
                        new CommObject (
                        ^
  required: CommObjectType
  found: int,String,String
  reason: actual and formal argument lists differ in length
Server.java:70: error: cannot find symbol
                        M_CMD_INCOMING_CONN,
                        ^
  symbol:   variable M_CMD_INCOMING_CONN
  location: class Server
Server_ProcThread.java:133: error: constructor Server_ClientWorkerThread in class Server_ClientWorkerThread cannot be applied to given types;
            Server_ClientWorkerThread cwt = new Server_ClientWorkerThread (c.getSocket (), id);
                                            ^
  required: int,Socket
  found: Socket,int
  reason: actual argument Socket cannot be converted to int by method invocation conversion
Server_ProcThread.java:161: error: cannot find symbol
                Server_Command sc = new Server_Command (M_SERV_CMD_RESP_AUTH_OK, sCmd.getMyCid ());
                                                        ^
  symbol:   variable M_SERV_CMD_RESP_AUTH_OK
  location: class Server_ProcThread
Server_ProcThread.java:165: error: cannot find symbol
                m_loginClients.add (sCmd.getMyCid (), scaq.getUserName ());
                              ^
  symbol:   method add(int,String)
  location: variable m_loginClients of type Hashtable<Integer,String>
Server_ProcThread.java:169: error: cannot find symbol
                m_loginRecord.add (scaq.getUserName (), new Date ());
                             ^
  symbol:   method add(String,Date)
  location: variable m_loginRecord of type Hashtable<String,Date>
Server_ProcThread.java:172: error: cannot find symbol
                Server_Command sc = new Server_Command (M_SERV_CMD_RESP_AUTH_FAIL, sCmd.getMyCid ());
                                                        ^
  symbol:   variable M_SERV_CMD_RESP_AUTH_FAIL
  location: class Server_ProcThread
Server_ProcThread.java:202: error: no suitable method found for toString(Server_CmdType)
            System.out.println ("Incoming MSG - " + Integer.toString (sCmd.getServCmd ()));
                                                           ^
    method Integer.toString() is not applicable
      (actual and formal argument lists differ in length)
    method Integer.toString(int) is not applicable
      (actual argument Server_CmdType cannot be converted to int by method invocation conversion)
    method Integer.toString(int,int) is not applicable
      (actual and formal argument lists differ in length)
    method Object.toString() is not applicable
      (actual and formal argument lists differ in length)
Server_ProcThread.java:215: error: cannot find symbol
                    handleSendCommObj (sCmd);
                    ^
  symbol:   method handleSendCommObj(Server_Command)
  location: class Server_ProcThread
Server_ProcThread.java:218: error: an enum switch case label must be the unqualified name of an enumeration constant
                case M_CMD_RESP_WHOELSE: {
                     ^
Server_ClientWorkerThread.java:21: error: cannot find symbol
        m_state = M_CLIENT_STATE_CONNECTED;
                  ^
  symbol:   variable M_CLIENT_STATE_CONNECTED
  location: class Server_ClientWorkerThread
Server_ClientWorkerThread.java:38: error: cannot find symbol
            CommObject co = new CommObject (E_COMM_RESP_LOGIN_OK);
                                            ^
  symbol:   variable E_COMM_RESP_LOGIN_OK
  location: class Server_ClientWorkerThread
Server_ClientWorkerThread.java:50: error: cannot find symbol
            CommObject co = new CommObject (E_COMM_RESP_LOGIN_FAIL);
                                            ^
  symbol:   variable E_COMM_RESP_LOGIN_FAIL
  location: class Server_ClientWorkerThread
Server_ClientWorkerThread.java:62: error: cannot find symbol
        scr.start ();
           ^
  symbol:   method start()
  location: variable scr of type Server_ClientReaderThread
Server_ClientReaderThread.java:38: error: cannot find symbol
        Server_Command_Auth sca = 
        ^
  symbol:   class Server_Command_Auth
  location: class Server_ClientReaderThread
Server_ClientReaderThread.java:39: error: cannot find symbol
            new Server_Command_Auth (
                ^
  symbol:   class Server_Command_Auth
  location: class Server_ClientReaderThread
Server_ClientReaderThread.java:40: error: cannot find symbol
                M_SERV_CMD_REQ_AUTH, 
                ^
  symbol:   variable M_SERV_CMD_REQ_AUTH
  location: class Server_ClientReaderThread
Server_ClientReaderThread.java:50: error: cannot find symbol
        Server_Command sc = new Server_Command (M_SERV_CMD_RESP_WHOELSE, m_cid, null);
                                                ^
  symbol:   variable M_SERV_CMD_RESP_WHOELSE
  location: class Server_ClientReaderThread
Server_ClientReaderThread.java:68: error: an enum switch case label must be the unqualified name of an enumeration constant
                        case M_COMM_SEND_LOGIN:
                             ^
Server_ClientReaderThread.java:72: error: an enum switch case label must be the unqualified name of an enumeration constant
                        case M_COMM_SEND_WHOELSE:
                             ^
Server_Command_NewConn.java:11: error: constructor Server_Command in class Server_Command cannot be applied to given types;
        super (cmd, 0, null);
        ^
  required: Server_CmdType,int
  found: int,int,<null>
  reason: actual and formal argument lists differ in length
Server_Command_NewConn.java:15: error: getServCmd() in Server_Command_NewConn cannot override getServCmd() in Server_Command
    int getServCmd () {
        ^
  return type int is not compatible with Server_CmdType
Server_Command_NewConn.java:16: error: incompatible types
        return m_cmd;
               ^
  required: int
  found:    Server_CmdType
Server_Command_SendString.java:22: error: cannot find symbol
        super (Server_Command.M_CMD_SEND_STRING, myCid, null);
                             ^
  symbol:   variable M_CMD_SEND_STRING
  location: class Server_Command
25 errors
